--- a/main.html
+++ b/main.html
@@ -1,9 +1,41 @@
 <html>
 <head>
-    homework 1
+    <title>
+        homework 1
+    </title>
 </head>
 
 <body>
-    <h1>Tim Berners Lee</h1>
+    <!--this is the header-->
+    <div id="header">
+        <h1>
+            Tim Berners Lee
+        </h1>
+    </div>
+    <!--this is the body-->
+    <div>
+        <p>
+            Sir Timothy John Berners-Lee (born 8 June 1955),also known as TimBL, is an English engineer and computer scientist,
+            best known as the inventor of the World Wide Web. He is currently a professor of computer science at the University
+            of Oxford and the Massachusetts Institute of Technology (MIT).[2][3] He made a proposal for an information
+            management system on 12 March 1989,[4][5] and he implemented the first successful communication between a Hypertext
+            Transfer Protocol (HTTP) client and server via the internet in mid-November the same year
+        </p>
+        <p>
+            Berners-Lee is the director of the World Wide Web Consortium (W3C), which oversees the continued development of the
+            Web. He is also the founder of the World Wide Web Foundation and is a senior researcher and holder of the 3Com
+            founders chair at the MIT Computer Science and Artificial Intelligence Laboratory (CSAIL).[11] He is a director of
+            the Web Science Research Initiative (WSRI),[12] and a member of the advisory board of the MIT Center for Collective
+            Intelligence.[13][14] In 2011, he was named as a member of the board of trustees of the Ford Foundation.[15] He is a
+            founder and president of the Open Data Institute, and is currently an advisor at social network MeWe.[16]
+        </p>
+        <img  src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Sir_Tim_Berners-Lee_%28cropped%29.jpg">
+    </div>
+    <!--this is the footer-->
+    <div>
+        <p><a href="https://okcoders.com/">Ok coders</a> is the first oklahoma bootcamp </p>
+    </div>
+
 </body>
+
 </html>
